--- a/Source/SmartFarming.csproj
+++ b/Source/SmartFarming.csproj
@@ -2,12 +2,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<Product>Smart Farming</Product>
-		<AssemblyVersion>1.10.2</AssemblyVersion>
+		<AssemblyVersion>1.10.6</AssemblyVersion>
 		<Version>1.4</Version>
 		<Copyright>2022</Copyright>
 		<Company>Owlchemist</Company>
-		<TargetFramework>net472</TargetFramework>
-		<LangVersion>8.0</LangVersion>
+		<TargetFramework>net48</TargetFramework>
+		<LangVersion>preview</LangVersion>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -27,12 +27,12 @@
 		</Reference>
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Krafs.Publicizer" Version="1.0.1">
+		<PackageReference Include="Krafs.Publicizer" Version="2.*">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="Lib.Harmony" Version="2.1.1" ExcludeAssets="runtime" />
-		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies.net472" Version="1.0.2">
+		<PackageReference Include="Lib.Harmony" Version="2.*" ExcludeAssets="runtime" />
+		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies.net48" Version="1.0.3">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
